# rtl-signald

./: .gitignore  CMakeLists.txt  README.md  service.sh  setup.sh
include/: ConfigManager.h  DeviceMonitor.h  SignalMonitor.h
src/: ConfigManager.cpp  DeviceMonitor.cpp  SignalMonitor.cpp  main.cpp
